welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:10: error: not found: value setColorBrush
  setColorBrush(Color.red)
  ^